--- a/wwwroot/Application/Admin/View/goal/add.html
+++ b/wwwroot/Application/Admin/View/goal/add.html
@@ -71,6 +71,26 @@
                     </select>
         </div>
              
+            <div class="btn-group-click adv-sch-pannel fl">
+                <button class="btn">高 级<i class="btn-arrowdown"></i></button>
+                <div class="dropdown cf">
+                    <div class="row">
+                        <label>更新时间：</label>
+                        <input type="text" id="time-start" name="time-start" class="text input-2x" value="" placeholder="起始时间" /> -
+                        <input type="text" id="time-end" name="time-end" class="text input-2x" value="" placeholder="结束时间" />
+                    </div>
+                    <div class="row">
+                        <label>创建者：</label>
+                        <input type="text" name="nickname" class="text input-2x" value="" placeholder="请输入用户名">
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+             
         <div>
             <input type="file" id="upload_picture_cover_id">
             <input type="hidden"  name="cover_id"  id="cover_id_cover_id"/>
