--- a/wwwroot/Application/Home/View/default/Public/body.html
+++ b/wwwroot/Application/Home/View/default/Public/body.html
@@ -86,7 +86,7 @@
                             </div>
                             <div id="collapseFour" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                            <a href="{:U('User/profile')}">个人信息</a>
+                                            <a href="{:U('User/profiles')}">个人信息</a>
                                 </div>
                             </div>
                         </div>
