--- a/wwwroot/Application/Home/View/default/User/profiles.html
+++ b/wwwroot/Application/Home/View/default/User/profiles.html
@@ -8,11 +8,12 @@
 </block>
 
 <block name="body">
-        <script type="text/javascript" src="__STATIC__/uploadify/jquery.uploadify.min.js"></script>
     <section>
         <div class="row">
             <div class="col-md-4">
                 <form class="form-horizontal" action="{:U()}" method="post" >
+                    
+                    <div id="img_save"><?php echo avatars();?></div>
                     <div class="form-group">
                         <label class="col-md-4 control-label" for="nickname">昵称</label>
                         <div class="col-md-8">
@@ -76,7 +77,7 @@
                     <div class="form-group">
                         <label class="col-md-4 control-label" for="telephone">生日</label>
                         <div class="col-md-8">
-                            <input type="text" name="birthday"  value="{$result.birthday}"  class="form-control" placeholder="请输入生日">
+                            <input type="text" id="time-start" name="birthday"  value="{$result.birthday}"  class="form-control" onkeyup="$(this).val('')" placeholder="请输入生日">
                         </div>
                         
                     <div>
@@ -90,59 +91,61 @@
                     </div>
                     <div class="controls Validform_checktip text-warning"></div>
                     <input type="hidden" name=id value="{$result.id}">
-
-                    <div class="form-group">
-                        <input type="file" id="upload_picture_cover_id">
-                        <input type="hidden"  name="cover_id"  id="cover_id_cover_id"/>
-                        <input type="hidden" name="iconurl" value="{$result.iconurl}" id="imgurl">
-                        <div class="upload-img-box">
-                            <img src=".{$result.iconurl}?<?php time()?>" alt="" width="120" height="90">
-                        </div>
-                    </div>
-                    <script type="text/javascript">
-                    //上传图片
-                    /* 初始化上传插件 */
-                    $("#upload_picture_cover_id").uploadify({
-                        "height"          : 30,
-                        "swf"             : "__STATIC__/uploadify/uploadify.swf",
-                        "fileObjName"     : "download",
-                        "buttonText"      : "修改头像",
-                        "uploader"        : "{:U('User/uploadPicture',array('session_id'=>session_id()))}",
-                        "width"           : 120,
-                        'removeTimeout'   : 1,
-                        'fileTypeExts'    : '*.jpg; *.png; *.gif;',
-                        "onUploadSuccess" : uploadPicturecover_id,
-                        'onFallback' : function() {
-                            alert('未检测到兼容版本的Flash.');
-                        }
-                    });
-                    function uploadPicturecover_id(file, data){
-                        var data = $.parseJSON(data);
-                        var src = '';
-                        if(data.status){
-                            $("#cover_id_cover_id").val(data.id);
-                            src = data.url || '__ROOT__' + data.path
-                            $("#cover_id_cover_id").parent().find('.upload-img-box').html(
-                                '<div class="upload-pre-item"><img src="' + src + '"/></div>'
-                            );
-                            $("#imgurl").val(src);
-                        } else {
-                            updateAlert(data.info);
-                            setTimeout(function(){
-                                $('#top-alert').find('button').click();
-                                $(that).removeClass('disabled').prop('disabled',false);
-                            },1500);
-                        }
-                    }
-                    </script> 
                 </form>
             </div>
+        </div>
+
+        <!-- Button trigger modal -->
+        <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+          上传头像
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="myModalLabel">上传头像</h4>
+              </div>
+              <div class="modal-body">
+                  <div id="altContent"  ><!-- 上传图片容器 -->
+                        
+                  </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+              </div>
+            </div>
+          </div>
         </div>
     </section>
 </block>
 <block name="side"> </block>
 <block name="script">
+<link href="__STATIC__/datetimepicker/css/datetimepicker.css" rel="stylesheet" type="text/css">
+<php>if(C('COLOR_STYLE')=='blue_color') echo '<link href="__STATIC__/datetimepicker/css/datetimepicker_blue.css" rel="stylesheet" type="text/css">';</php>
+<link href="__STATIC__/datetimepicker/css/dropdown.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="__STATIC__/datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
+<script type="text/javascript" src="__STATIC__/datetimepicker/js/locales/bootstrap-datetimepicker.zh-CN.js" charset="UTF-8"></script>
+
+    <script src="http://open.web.meitu.com/sources/xiuxiu.js" type="text/javascript"></script>
+
     <script type="text/javascript">
+        window.onload=function(){
+            xiuxiu.embedSWF("altContent",5,"850","560");
+               /*第1个参数是加载编辑器div容器，第2个参数是编辑器类型，第3个参数是div容器宽，第4个参数是div容器高*/
+            var url = "{:U('user/upload')}";
+            xiuxiu.setUploadURL("http://127.0.0.1/"+url);//修改为您自己的上传接收图片程序 
+            xiuxiu.onUploadResponse = function (data)
+            {
+                if(data==1){
+                  $("#img_save").html("<img width=60 height=60 src=./Uploads/avatars/{$result.uid}/{$result.uid}.jpg?<?php echo rand(100,999);  ?> alt=>");
+                }else{
+                    alert('服务器繁忙！');
+                }
+            }
+        }
         $(document)
                 .ajaxStart(function() {
                     $("button:submit").addClass("log-in").attr("disabled", true);
@@ -163,6 +166,13 @@
                 }
             }
         });
+    $('#time-start').datetimepicker({
+        format: 'yyyy-mm-dd',
+        language:"zh-CN",
+        minView:2,
+        autoclose:true
+    });
+
 
     </script>
 </block>
